// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`backgroundColor renders 0 1`] = `
Array [
  .c0 {
  background-color: #0;
}

<div
    className="c0"
  />,
  .c0 {
  background-color: #0;
}

<div
    className="c0"
  />,
  .c0 {
  background-color: #0;
}

<div
    className="c0"
  />,
  .c0 {
  background-color: #0;
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundColor renders function 1`] = `
Array [
  .c0 {
  background-color: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  background-color: has;
}

<div
    className="c0"
  />,
  .c0 {
  background-color: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  background-color: has;
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundColor renders invalid theme path 1`] = `
Array [
  .c0 {
  background-color: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  background-color: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  background-color: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  background-color: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundColor renders negative number 1`] = `
Array [
  .c0 {
  background-color: #-54881;
}

<div
    className="c0"
  />,
  .c0 {
  background-color: #-54881;
}

<div
    className="c0"
  />,
  .c0 {
  background-color: #-42365;
}

<div
    className="c0"
  />,
  .c0 {
  background-color: #-42365;
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundColor renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    background-color: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-color: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-color: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    background-color: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    background-color: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-color: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-color: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    background-color: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    background-color: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-color: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-color: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    background-color: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    background-color: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-color: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-color: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    background-color: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundColor renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    background-color: July;
  }
}

@media April {
  .c0 {
    background-color: August;
  }
}

@media January {
  .c0 {
    background-color: September;
  }
}

@media April {
  .c0 {
    background-color: November;
  }
}

@media June {
  .c0 {
    background-color: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    background-color: July;
  }
}

@media April {
  .c0 {
    background-color: August;
  }
}

@media January {
  .c0 {
    background-color: September;
  }
}

@media April {
  .c0 {
    background-color: November;
  }
}

@media June {
  .c0 {
    background-color: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    background-color: January;
  }
}

@media April {
  .c0 {
    background-color: December;
  }
}

@media January {
  .c0 {
    background-color: April;
  }
}

@media April {
  .c0 {
    background-color: May;
  }
}

@media June {
  .c0 {
    background-color: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    background-color: January;
  }
}

@media April {
  .c0 {
    background-color: December;
  }
}

@media January {
  .c0 {
    background-color: April;
  }
}

@media April {
  .c0 {
    background-color: May;
  }
}

@media June {
  .c0 {
    background-color: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundColor renders postitive number 1`] = `
Array [
  .c0 {
  background-color: #54881;
}

<div
    className="c0"
  />,
  .c0 {
  background-color: #54881;
}

<div
    className="c0"
  />,
  .c0 {
  background-color: #42365;
}

<div
    className="c0"
  />,
  .c0 {
  background-color: #42365;
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundColor renders string 1`] = `
Array [
  .c0 {
  background-color: July;
}

<div
    className="c0"
  />,
  .c0 {
  background-color: July;
}

<div
    className="c0"
  />,
  .c0 {
  background-color: June;
}

<div
    className="c0"
  />,
  .c0 {
  background-color: June;
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundColor renders valid theme path 1`] = `
Array [
  .c0 {
  background-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  background-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  background-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  background-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
